--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "author": "Brice Wilson",
     "license": "ISC",
     "devDependencies": {
-        "ts-loader": "8.0.17",
-        "typescript": "4.2.2",
-        "webpack": "5.22.0",
-        "webpack-cli": "4.5.0",
+        "ts-loader": "^8.0.17",
+        "typescript": "^4.2.2",
+        "webpack": "^5.22.0",
+        "webpack-cli": "^4.9.0",
         "webpack-dev-server": "3.11.2"
+    },
+    "dependencies": {
+        "@types/lodash": "^4.14.176",
+        "loadash": "^1.0.0"
     }
 }
